--- a/IdentityService/IdentityService/MicroIdentityService.csproj
+++ b/IdentityService/IdentityService/MicroIdentityService.csproj
@@ -3,6 +3,8 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <AssemblyName>MicroIdentityService</AssemblyName>
+    <RootNamespace>MicroIdentityService</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
@@ -11,6 +13,12 @@
     <PackageReference Include="Serilog" Version="2.10.0" />
     <PackageReference Include="Serilog.AspNetCore" Version="3.4.0" />
     <PackageReference Include="Serilog.Extensions.Logging" Version="3.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Models\" />
+    <Folder Include="Repositories\" />
+    <Folder Include="Services\" />
   </ItemGroup>
 
 </Project>
