Added the option to create an admin on startup via config

--- a/MicroIdentityService/MicroIdentityService/appsettings.json
+++ b/MicroIdentityService/MicroIdentityService/appsettings.json
@@ -2,6 +2,11 @@
   "Persistence": {
     "Strategy": "InMemory"
   },
+  "Administrator": {
+    "CreateIfMissing": false,
+    "Identifier": "",
+    "Password":  ""
+  },
   "Jwt": {
     "Secret": "",
     "Issuer": "MicroIdentityService",
