Implemented identifier validation

--- a/MicroIdentityService/MicroIdentityService/appsettings.json
+++ b/MicroIdentityService/MicroIdentityService/appsettings.json
@@ -5,7 +5,10 @@
   "Administrator": {
     "CreateIfMissing": false,
     "Identifier": "",
-    "Password":  ""
+    "Password": ""
+  },
+  "IdentifierValidation": {
+    "Strategy": "None"
   },
   "Jwt": {
     "Secret": "",
