--- a/mis-frontend/package.json
+++ b/mis-frontend/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "element-ui": "^2.13.2",
     "vue": "^2.6.12",
     "vue-router": "^3.4.7",
     "vuex": "^3.5.1"
