--- a/mis-frontend/package.json
+++ b/mis-frontend/package.json
@@ -7,6 +7,7 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@mdi/js": "^5.8.55",
     "core-js": "^3.6.5",
     "element-ui": "^2.13.2",
     "vue": "^2.6.12",
