Refactored validation and added password validation

--- a/MicroIdentityService/MicroIdentityService/appsettings.json
+++ b/MicroIdentityService/MicroIdentityService/appsettings.json
@@ -10,6 +10,9 @@
   "IdentifierValidation": {
     "Strategy": "None"
   },
+  "PasswordValidation": {
+    "Strategy": "None"
+  },
   "Jwt": {
     "Secret": "",
     "Issuer": "MicroIdentityService",
