--- a/mis-frontend/package.json
+++ b/mis-frontend/package.json
@@ -10,6 +10,7 @@
     "@mdi/js": "^5.8.55",
     "core-js": "^3.6.5",
     "element-ui": "^2.13.2",
+    "jwt-decode": "^2.2.0",
     "vue": "^2.6.12",
     "vue-i18n": "^8.22.1",
     "vue-router": "^3.4.7",
