Added PostgreSQL support and implemented API key SQL repository

--- a/MicroIdentityService/MicroIdentityService/appsettings.json
+++ b/MicroIdentityService/MicroIdentityService/appsettings.json
@@ -17,5 +17,8 @@
     "Secret": "",
     "Issuer": "MicroIdentityService",
     "LifetimeInMinutes": 60
+  },
+  "Database": {
+    "ConnectionString": "Host=localhost;Database=mis;Username=mis;Password="
   }
 }
